...
          }

          return ListView(
            padding: const EdgeInsets.all(12),
            children: [
              AppButton(
                key: const Key('bloc_add_note_button'),
                text: 'Add Local BLoC Note',
                onPressed: () {
                  Navigator.push(
                    context,
                    MaterialPageRoute(
                      builder: (_) => BlocProvider.value(
...
